--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ dj-database-url==0.3.0
 Django==1.9.1
 gunicorn==19.4.5
 macholib==1.5.1
-matplotlib==1.3.1
 modulegraph==0.10.4
-numpy==1.8.0rc1
+numpy==1.8.0
 psycopg2==2.6.1
 py2app==0.7.3
 pyOpenSSL==0.13.1
